--- a/about.html
+++ b/about.html
@@ -7,14 +7,14 @@
         <link rel="stylesheet" type="text/css" href="stylesheet.css">
     </head>
     <body>
-        <div style="background-image: url('smoke.jpg'); opacity: 0.5; height: 400px; width: 100%; z-index: -1; position: fixed;">
+        <div style="background-image: url('fog.jpg'); opacity: 0.5; height: 400px; width: 100%; z-index: -1; position: fixed;">
            
         </div>
         <div >
-             <h2 style='color: RED'>
+             <h2 style='color: green; padding: 20px 20px;'>
                 About Us: <br>
             </h2>
-            <p style="color: white">
+            <p style="color: white; padding: 20px 20px;">
                <img src="human.jpg" align='right' width="350px" height="200px"> 
                The human body is the entire structure of a human being. It is composed of many different types of cells that together create tissues and subsequently organ systems. They ensure homeostasis and the viability of the human body.
                It comprises a head, neck, trunk (which includes the thorax and abdomen), arms and hands, legs and feet. <br>
