--- a/master.html
+++ b/master.html
@@ -2,11 +2,14 @@
 <html>
     <head>
         <title>
-            Welcome
+            Garage Sounds
         </title>
         <link rel='stylesheet' type='text/css' href='stylesheet.css'>
+        <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <meta name="HandheldFriendly" content="true">
     </head>
-    <body background="bg.jpg">
+    <body background="background.jpg">
         <table width="80%" align="center">
             <tr>
                 <td class='heading' style="background-image: url('banner.png'); background-size: cover;">
@@ -18,19 +21,20 @@
                     <ul>
                         <li><a href="home.html" target="cntnt">Home</a></li>
                         <li><a href="about.html" target="cntnt">About</a></li>
-                        <li><a href="#contact" target="cntnt">Contact</a></li>
-                        <li><a href="download.html" target="cntnt">Download</a></li>  
+                        <li><a href="contact.html" target="cntnt">Contact</a></li>
+                        <li><a href="download.html" target="cntnt">Download</a></li>
+                        <li><a href="batches.html" target="cntnt">Batches</a></li>                                            
                     </ul>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <iframe name="cntnt" src="home.html" width="100%" height="572px"></iframe>
+                    <iframe name="cntnt" src="home.html" width="100%" height="420%"></iframe>
                 </td>
             </tr>
             <tr>
                 <td align="center" style="color: white">
-                    &copy;Abhishek Lingwal
+                    &copy; 2017 Garage Sounds. All rights reserved.
                 </td>
             </tr>
         </table>
