--- a/download.html
+++ b/download.html
@@ -2,53 +2,7 @@
 <html>
     <head>
         <title>Download</title>
-        <style>
-            input[type=text]{
-                width: 40%;
-                padding: 12px 20px;
-                margin: 8px 0;
-                display: inline-block;
-                border: 1px solid #ccc;
-                border-radius: 4px;
-                box-sizing: border-box;
-            }
-            .mod{
-                color:white;
-                font-family: calibri;
-            }
-            .btn {
-                background-color: #2E9CD8;
-                border: none;
-                width: 150px;
-                color: white;
-                padding: 10px 10px;
-                text-align: center;
-                text-decoration: none;
-                display: inline-block;
-                font-size: 16px;
-                 }
-                 .btn span:after {
-                content: '\25bc';
-                position: absolute;
-                opacity: 0;
-                top: 0;
-                right: -15px;
-                transition: 0.5s;
-            }
-            .btn:hover span {
-                padding-right: 15px;
-            }
-            .btn:hover span:after{
-                opacity: 1;
-                right: 0;
-            }
-            .btn span{
-                cursor: pointer;
-                display: inline-block;
-                position: relative;
-                transition: 0.5s;
-            }
-            </style>
+        <link rel="stylesheet" type="text/css" href="downloadcss.css">
     </head>
     <body bgcolor="#6BDB8B">
         
@@ -56,12 +10,12 @@
         <h2 class="mod">
             Please type artist or song name to search:
         </h2>
-        <input id="query" type="text" placeholder="Search"/> <input type="image" src='glass.png' width="35" height="35" align='center' id="search-button" id="srch" onclick="keyWordsearch();">  
+        <input id="query" type="text" placeholder="Search"/> <input type="image" src='glass.png' width="35" height="35" align='center' id="search-button" onKeyDown="if(event.keyCode==13) keyWordsearch();" onclick="keyWordsearch()">  
     </center>
 
-    <div id="container" align='center'>
-        <ul id="results" ></ul>
-    </div> 
+    <div id="container" align='center'>        
+        <ul id="results"></ul>
+        </div> 
      <script>
          
      function keyWordsearch(){
@@ -86,15 +40,10 @@
                 vidThumburl =  item.snippet.thumbnails.default.url;                 
                 vidThumbimg = '<pre><img id="thumb" src="'+vidThumburl+'" alt="No Image Available." style="width:204px;height:128px"></pre>';                   
                 if(item.id.videoId) {
-                $('#results').append('<pre>' + vidTitle + vidThumbimg + getlink +'</pre>');  
+                $('#results').append('<pre class="animate-bottom">' + vidTitle + vidThumbimg + getlink +'</pre>');  
             }
         });  
     });  
-}
-     document.getElementById('srch').onkeydown = function(event) {
-    if (event.keyCode == 13) {
-        keyWordsearch();
-    }
 }
   </script> 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
