--- a/about.html
+++ b/about.html
@@ -7,20 +7,28 @@
         <link rel="stylesheet" type="text/css" href="stylesheet.css">
     </head>
     <body>
-        <div style="background-image: url('fog.jpg'); opacity: 0.5; height: 400px; width: 100%; z-index: -1; position: fixed;">
+        <div style="background-image: url('fog.jpg'); opacity: 0.4; height: 400px; width: 100%; z-index: -1; position: fixed;">
            
         </div>
         <div >
-             <h2 style='color: green; padding: 20px 20px;'>
-                About Us: <br>
+             <h2 style='color: whitesmoke; padding: 20px 20px; font-family: calibri;'>
+                Welcome to Garage Sounds <br>
             </h2>
-            <p style="color: white; padding: 20px 20px;">
-               <img src="human.jpg" align='right' width="350px" height="200px"> 
-               The human body is the entire structure of a human being. It is composed of many different types of cells that together create tissues and subsequently organ systems. They ensure homeostasis and the viability of the human body.
-               It comprises a head, neck, trunk (which includes the thorax and abdomen), arms and hands, legs and feet. <br>
-               The study of the human body involves anatomy, physiology, histology and embryology. The body varies anatomically in known ways. <br>
-               Physiology focuses on the systems and organs of the human body and their functions. Many systems and mechanisms interact in order to maintain homeostasis, with safe levels of substances such as sugar and oxygen in the blood.
-               The body is studied by health professionals, physiologists, anatomists, and by artists to assist them in their work.
+            <p style="color: white; padding: 20px 20px; font-family: arial;">
+                <img src="acoustic.png" align='right' width="30%" height="30%" style="padding: 10px 50px;"> 
+            Here you can download your favourite music directly from youtube search.. We do not charge anything from our users to use our site. 
+            Just type your search query in the search box and click the search button. 
+            <br>
+            <br>
+            The quality of the music downloaded is moderate for now but we will make it to 320kbps in future updates. We even have a batch section where we will provide
+            albums, discography and greatest hits from popular artist. It is yet under construction.
+            <br>
+            <br>
+            Music downloaded from here are only for personnel, non-commercial use. Any misfortune or copyright issues are not to be handled by us. Therefore, please buy the
+            original product and support the artist!!            
+            <br>
+            <br>
+            Have fun and enjoy the use of our website.
             </p>
             </div>
         
