--- a/about.html
+++ b/about.html
@@ -5,9 +5,12 @@
             About Us:
         </title>
         <link rel="stylesheet" type="text/css" href="stylesheet.css">
+        <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <meta name="HandheldFriendly" content="true">
     </head>
     <body>
-        <div style="background-image: url('fog.jpg'); opacity: 0.4; height: 400px; width: 100%; z-index: -1; position: fixed;">
+        <div style="background-image: url('fog.jpg'); opacity: 0.4; height: 100%; width: 100%; z-index: -1; position: fixed; background-size: cover;">
            
         </div>
         <div >
