--- a/master.html
+++ b/master.html
@@ -10,10 +10,10 @@
         <meta name="HandheldFriendly" content="true">
     </head>
     <body background="background.jpg">
-        <table width="80%" align="center">
+        <table width="90%" align="center">
             <tr>
                 <td class='heading' style="background-image: url('banner.png'); background-size: cover;">
-            <center><h1 style="font-family: calibri; color: black;">GARAGE <img src="bar.png" height="100" width="130" align="center"> SOUNDS</h1></center>
+            <center><h1 style="font-family: calibri; color: black;">GARAGE <img src="bar.png" height="5%" width="8%" align="center"> SOUNDS</h1></center>
                 </td>
             </tr>
             <tr>
@@ -23,7 +23,8 @@
                         <li><a href="about.html" target="cntnt">About</a></li>
                         <li><a href="contact.html" target="cntnt">Contact</a></li>
                         <li><a href="download.html" target="cntnt">Download</a></li>
-                        <li><a href="batches.html" target="cntnt">Batches</a></li>                                            
+                        <li><a href="batches.html" target="cntnt">Batches</a></li>
+                        <li><a href="request.html" target="cntnt">Request</a></li>
                     </ul>
                 </td>
             </tr>
