--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
         <title>
             About Us:
         </title>
-        <link rel="stylesheet" type="text/css" href="stylesheet.css">
+        <link rel="stylesheet" type="text/css" href="mastercss.css">
         <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="HandheldFriendly" content="true">
@@ -15,12 +15,14 @@
         </div>
         <div >
              <h2 style='color: whitesmoke; padding: 20px 20px; font-family: calibri;'>
-                Welcome to Garage Sounds <br>
+                Welcome to BlackCatTunes <br>
             </h2>
             <p style="color: white; padding: 20px 20px; font-family: arial;">
                 <img src="acoustic.png" align='right' width="30%" height="30%" style="padding: 10px 50px;"> 
-            Here you can download your favourite music directly from youtube search.. We do not charge anything from our users to use our site. 
-            Just type your search query in the search box and click the search button. 
+            Here you can download your favourite music without any surveys or ads.. We do not charge anything from our users to use our site. 
+            We are a small, still learning group who made this website as a project. If you ever want to meet us in real life:<br>
+            <br>
+            
             <br>
             <br>
             The quality of the music downloaded is moderate for now but we will make it to 320kbps in future updates. We even have a batch section where we will provide
